--- a/hosted/style.css
+++ b/hosted/style.css
@@ -363,6 +363,7 @@ nav:nth-child(1) {
     transition: border-color 0.2s;
 }
 
+
 /* Recipe Chart CSS */
 #recipes {
     width: 40%;
@@ -563,6 +564,45 @@ p.priceCategory {
 
 /* https://www.w3schools.com/howto/howto_css_modals.asp */
 /* The Modal (background) */
+
+/* Information CSS */
+.infoForm {
+    opacity: .9;
+    border: 2px solid #2f2626;
+    width: 600px;
+    margin-top: -20px;
+    padding-top: 10px;
+    background-color: #ffcc9b;
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+#infoButton{
+    transition: background-color 0.4s ease;
+    text-align: center;
+    margin: 0 auto;
+    display: block;
+    margin: 1em;
+    font-size: 1.2em;
+    width: 200px;
+    background-color: #2f2626;
+    border-radius: 2px;
+    border-color: #5f4c4c;
+    padding: 3px 0px;
+    color: white;
+    text-decoration: none;  
+}
+
+.infoRecipeh3{
+    z-index: 1;
+    padding: 0.5em;
+    width: 150px;
+    position: relative;
+    margin-left: .5em;
+    color: black;
+    background-color: sandybrown;
+    border: 2px solid;
+}
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
@@ -592,6 +632,15 @@ p.priceCategory {
   animation-duration: 0.4s
 }
 
+.modal-backdrop {
+    position: static;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1040;
+    background-color: #000;
+}
 /* Add Animation */
 @-webkit-keyframes animatetop {
   from {top:-300px; opacity:0} 
@@ -613,14 +662,14 @@ p.priceCategory {
 
 .close:hover,
 .close:focus {
-  color: #000;
+  color: red;
   text-decoration: none;
   cursor: pointer;
 }
 
 .modal-header {
   padding: 2px 16px;
-  background-color: #5cb85c;
+  background-color: #5f4c4c;
   color: white;
 }
 
@@ -628,6 +677,6 @@ p.priceCategory {
 
 .modal-footer {
   padding: 2px 16px;
-  background-color: #5cb85c;
+  background-color: #5f4c4c;
   color: white;
 }
