--- a/views/information.handlebars
+++ b/views/information.handlebars
@@ -15,7 +15,6 @@
   crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-      
     
   <link rel="shortcut icon" href="/assets/img/favicon.png"/>
   <link rel="stylesheet" type="text/css" href="/assets/style.css"/>
@@ -39,6 +38,9 @@
           <a class="nav-link" href="/logout">Logout</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/addRecipe">Add Recipe</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/deleteRecipe">Delete Recipe</a>
         </li>
         <li class="nav-item">
@@ -49,110 +51,30 @@
   </div>
 </nav>
 <section id="recipes"></section>
-<h3 class="makeRecipeh3">Create a Recipe</h3>
+<h3 class="makeRecipeh3">Modify a Recipe</h3>
   <section id="makeRecipe">
-  </section>
-<div class="info">
-    <h3 class="infoRecipeh3">Information</h3>
-    <div class="infoForm" name="infoForm" method="GET"> 
-<button id="infoButton" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Information</button></div>
-   
+      <button id="nf" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Information></button>
+
 <div id="myModal" class="modal">
   <!-- Modal content -->
   <div class="modal-content">
     <div class="modal-header">
-
-      <h3>Recipe Information</h3>
-          <span class="close">&times;</span>
+      <span class="close">&times;</span>
+      <h2>Recipe Information</h2>
     </div>
     <div class="modal-body">
-        <div class="my-editor" placeholder="Your text as placeholder"></div>
-         <label for="recipeName">Recipe Name</label>
-            <input type="text" class="form-control" id="recipeName"/>
-      <p>Recipe Comment: </p>
-            <textarea name="paragraph_text" cols="50" rows="10"></textarea>
-
+      <p>${recipeName}</p>
+      <p>Some other text...</p>
     </div>
     <div class="modal-footer">
-      <h3>${recipe.recipeName}</h3>
+      <h3>${recipeName}</h3>
     </div>
   </div>
+
 </div>
-</div> 
-      <div class="search">
-        <h3 class="searchRecipeh3">Search Recipe</h3>
-          <form class="searchForm" name="searchForm" method="GET">
-            <input type="text" class="searchForm input" id="searchByTaste" placeholder="Search By Recipe Name">
-            <button class="formSubmit" type="button" onclick="searchRecipe()">Search Recipe</button>
-            </form>
-      </div>
-
-    <!-- <script src="/assets/searchBundle.js"></script> -->
-<script>
-//search for recipe
-const searchRecipe = () => {
-
-    let recipeName = document.getElementById("searchByTaste").value;
-    
-    recipeName = recipeName.toLowerCase();
-    recipeName = recipeName.trim();
-    // grabs recipe class objects
-    let recipeNodeObj = document.querySelectorAll(".recipeList");
-
-    let recipeShow = false;
-
-    recipeNodeObj.forEach(recipeList => {
-    //if search input matches a name
-        let title = recipeList.querySelector("p").innerHTML;
-        title = title.toLowerCase();
-
-        if (recipeName == "sweet") {
-           if(title.indexOf("sweet") > -1){
-            recipeShow = true;
-            recipeList.style.display = "block";
-           } else {
-            recipeList.style.display = "none"; 
-           }
-        } 
-        else if (recipeName == "spicy"){
-           if(title.indexOf("spicy") > -1){
-            recipeShow = true;
-            recipeList.style.display = "block";
-           } else {
-            recipeList.style.display = "none"; 
-           }            
-        }
-        else if (recipeName == "sour"){
-            recipeList.style.display = "block"; 
-           
-            if(title.indexOf("spicy" ) > -1){
-                    recipeShow = true;
-                    recipeList.style.display = "block";
-           }
-           }
-        else if (recipeName =="bitter"){
-           if(title.indexOf("bitter") > -1){
-            recipeShow = true;
-            recipeList.style.display = "block";
-           } else {
-            recipeList.style.display = "none"; 
-           }
-        }
-        else {
-            recipeList.style.display = "none";  
-        }
-        recipeList.style.display = "none"; 
-    });
-}
-  const showRecipe = () => {
-      window.location.href="/addRecipe";
-  }
-
-</script>
-        
-
+  </section>
   <div id="errorMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box" />
-    <h3><span id="success"></span>Password Changed!</h3>
+    <h3><span id="success"></span>Error!</h3>
   </div>
 <div id="success"><img id="success" src="/assets/img/success.png" alt="success"/></div>
   <script src="/assets/bundle.js"></script>
