--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -51,7 +51,11 @@
 <section id="recipes"></section>
 <h3 class="makeRecipeh3">Create a Recipe</h3>
   <section id="makeRecipe">
+    {{#if userInfo}}
+        <h3 id="favoriteNote">Favorited: {{userInfo.favorited}}</h3>
+    {{/if}}
   </section>
+        
 <div class="info">
     <h3 class="infoRecipeh3">Information</h3>
     <div class="infoForm" name="infoForm" method="GET"> 
@@ -87,69 +91,7 @@
             </form>
       </div>
 
-    <!-- <script src="/assets/searchBundle.js"></script> -->
-<script>
-//search for recipe
-const searchRecipe = () => {
-
-    let recipeName = document.getElementById("searchByTaste").value;
-    
-    recipeName = recipeName.toLowerCase();
-    recipeName = recipeName.trim();
-    // grabs recipe class objects
-    let recipeNodeObj = document.querySelectorAll(".recipeList");
-
-    let recipeShow = false;
-
-    recipeNodeObj.forEach(recipeList => {
-    //if search input matches a name
-        let title = recipeList.querySelector("p").innerHTML;
-        title = title.toLowerCase();
-
-        if (recipeName == "sweet") {
-           if(title.indexOf("sweet") > -1){
-            recipeShow = true;
-            recipeList.style.display = "block";
-           } else {
-            recipeList.style.display = "none"; 
-           }
-        } 
-        else if (recipeName == "spicy"){
-           if(title.indexOf("spicy") > -1){
-            recipeShow = true;
-            recipeList.style.display = "block";
-           } else {
-            recipeList.style.display = "none"; 
-           }            
-        }
-        else if (recipeName == "sour"){
-            recipeList.style.display = "block"; 
-           
-            if(title.indexOf("spicy" ) > -1){
-                    recipeShow = true;
-                    recipeList.style.display = "block";
-           }
-           }
-        else if (recipeName =="bitter"){
-           if(title.indexOf("bitter") > -1){
-            recipeShow = true;
-            recipeList.style.display = "block";
-           } else {
-            recipeList.style.display = "none"; 
-           }
-        }
-        else {
-            recipeList.style.display = "none";  
-        }
-        recipeList.style.display = "none"; 
-    });
-}
-  const showRecipe = () => {
-      window.location.href="/addRecipe";
-  }
-
-</script>
-        
+    <script src="/assets/searchBundle.js"></script>
 
   <div id="errorMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box" />
     <h3><span id="success"></span>Password Changed!</h3>
