--- a/hosted/style.css
+++ b/hosted/style.css
@@ -12,7 +12,7 @@ html, body {
     font-size: 62.5%;
     font-size: 10px;
     overflow-x: hidden;
-    background-image: url('img/backgroundEdited.gif');
+    background-image: url('img/backgroundEdited.jpg');
     background-size: cover;
     background-repeat: repeat-y no-repeat;
     background-color: skyblue;
